# pycricketpred

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml  continuous_integration.yml
data_example/: train_data.csv
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/data/: train_data.csv
docs/data/example_parquet/: 211028.parquet  211048.parquet  222678.parquet
src/pycricketpred/: __init__.py  data_cleaning.py  data_wrangling.py  eda.py  modelling.py
tests/: helpers_data_cleaning.py  helpers_data_wrangling.py  helpers_eda.py  test_data_cleaning.py  test_data_wrangling.py  test_eda.py  test_modelling.py  test_pycricketpred.py
