[tool.poetry]
name = "pycricketpred"
version = "0.1.0"
description = "A package for predicting and find interesting cricket related statistics!"
authors = ["DSCI 310 Group 11: Alex Lin, Jackson Siemens, Shruti Vijaykumar Seetharam, Hanlin Zhao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "4.1.4"
numpy = "1.26.4"
pyarrow = "15.0.1"
matplotlib = "3.8.3"
pandas = "2.2.1"
click = "8.1.7"
scikit-learn = "1.2.0"
altair = "5.2.0"
vegafusion = "1.6.5"
vl-convert-python = "1.2.3"
pytest = "8.1.1"
pytest-cov = "5.0.0"
vegafusion-python-embed = "1.6.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
